<resources>
        <string name="app_name">OnlineBank</string>
        <string name="full_name">Online Bank</string>
        <string name="get_id">User ID:</string>
        <string name="get_pw">Password:</string>
        <string name="login">Log In</string>
        <string name="userid_hint">User ID</string>
        <string name="logout">Log Out</string>
        <string name="logo_description">This is the logo of JBFB bank.</string>
        <string name="null_field">Please enter both User ID and password.</string>
        <string name="invalid_userid">User ID does not exist.</string>
        <string name="forget_password">Forget password</string>
        <string name="forget_pw_instr">Enter your user ID, name and address for verification,
    and your new password.</string>
        <string name="get_new_pw">New password:</string>
        <string name="new_password_hint">New password</string>
        <string name="not_match_into">Information does not match</string>
        <string name="get_confirm_pw">Confirm password:</string>
        <string name="confirm_pw">Confirm password</string>
        <string name="password_not_match">Passwords do not match</string>
        <string name="welcome_admin">Hello! Admin</string>
        <string name="admin_menu">Admin Terminal</string>
        <string name="make_admin">Create an admin</string>
        <string name="make_teller">Create a teller</string>
        <string name="check_admins">View all admins</string>
        <string name="check_tellers">View all tellers</string>
        <string name="check_customers">View all customers</string>
        <string name="admin_view_total_bal">View customer\'s total balance</string>
        <string name="admin_view_total_money">View bank\'s total balance</string>
        <string name="admin_promote_teller">Promote a teller to admin</string>
        <string name="admin_message">Message</string>
        <string name="welcome_teller">Hello! Teller</string>
        <string name="teller_menu">ATM Booth</string>
        <string name="teller_auth_cus">Authenticate new customer</string>
        <string name="teller_make_cus">Make a new customer</string>
        <string name="teller_make_account">Make a new account</string>
        <string name="teller_give_interest">Give interest</string>
        <string name="teller_make_deposit">Make a deposit</string>
        <string name="teller_make_withdrawal">Make a withdrawal</string>
        <string name="teller_check_balance">Check balance of an account</string>
        <string name="teller_list_accounts">List all accounts</string>
        <string name="teller_total_bal">View total balance</string>
        <string name="teller_update_info">Update customer information</string>
        <string name="teller_logout_customer">Close customer session</string>
        <string name="teller_message">Message</string>
        <string name="welcome_atm">Hello! Customer</string>
        <string name="atm_menu">Customer</string>
        <string name="atm_list_accounts">List accounts and balance</string>
        <string name="atm_deposit">Make deposit</string>
        <string name="atm_withdraw">Make withdrawal</string>
        <string name="atm_check_balance">Check balance of an account</string>
        <string name="atm_message">View messages</string>
        <string name="view_message">View message</string>
        <string name="new_admin">Create a new admin</string>
        <string name="new_teller">Create a new teller</string>
        <string name="create_instr">Enter the following information.</string>
        <string name="name">Name:</string>
        <string name="age">Age:</string>
        <string name="address">Address:</string>
        <string name="password">Password:</string>
        <string name="create">Create</string>
        <string name="name_hint">Name</string>
        <string name="age_hint">Age</string>
        <string name="address_hint">Enter Your Address</string>
        <string name="pw_hint">Password</string>
        <string name="admin_created">Admin created. New admin ID is: </string>
        <string name="teller_created">Teller created. New teller ID is: </string>
        <string name="null_info">Please do not leave the fields blank.</string>
        <string name="admin_create_failed">Admin cannot be created.</string>
        <string name="teller_create_failed">Teller cannot be created.</string>
        <string name="customer_created">Customer created.</string>
        <string name="customer_create_failed">Customer cannot be created.</string>
        <string name="new_customer_id">New customer ID is </string>
        <string name="admin_list">List of admins</string>
        <string name="teller_list">List of tellers</string>
        <string name="customer_list">List of customers</string>
        <string name="list_id">User ID</string>
        <string name="list_name">Name</string>
        <string name="auth_cus_instr">Please enter customer ID and password.</string>
        <string name="customer_authenticated">Customer authenticated.</string>
        <string name="incorrect_password">Incorrect password.</string>
        <string name="not_customer">User is not a customer.</string>
        <string name="existing">Another customer is currently being served.</string>
        <string name="get_account_name">Account name:</string>
        <string name="get_account_balance">Account balance:</string>
        <string name="get_account_type">Account type:</string>
        <string name="account_name_hint">Account name</string>
        <string name="account_balance_hint">Balance</string>
        <string name="account_type">Account type</string>
        <string-array name="types_array">
            <item>CHEQUING</item>
            <item>SAVING</item>
            <item>TFSA</item>
            <item>RESTRICTED SAVING</item>
            <item>BALANCE OWING</item>
        </string-array>
        <string name="account_created">Account created.</string>
        <string name="account_create_failed">Account cannot be created.</string>
        <string name="new_account_id">New account ID is </string>
        <string name="savings_balance">Balance cannot be less than $1000.</string>
        <string name="interest_instr">Enter account ID to give interest to:</string>
        <string name="get_account_id">Account ID:</string>
        <string name="account_id_hint">Account ID</string>
        <string name="submit">Submit</string>
        <string name="fail_interest">Interest cannot be added.</string>
        <string name="deposit_instr">Enter account ID and amount to make deposit:</string>
        <string name="deposit_amount">Deposit amount:</string>
        <string name="deposit_amount_hint">Deposit amount</string>
        <string name="make_deposit">Deposit</string>
        <string name="withdraw_instr">Enter account ID and amount to make withdrawal:</string>
        <string name="withdraw_amount">Withdraw amount:</string>
        <string name="withdraw_amount_hint">Withdraw amount</string>
        <string name="make_withdrawal">Withdraw</string>
        <string name="saving_chequing">Success.\n Account has been converted to a chequing account.</string>
        <string name="view_own_msg">View your messages</string>
        <string name="view_your_cus_msg">View customer\'s messages</string>
        <string name="leave_msg">Leave a message</string>
        <string name="view_any_msg">View all messages</string>
        <string name="no_current_customer">There is no current customer right now.</string>
        <string name="message_owner">Messages for</string>
        <string name="message_owner_all">All messages:</string>
        <string name="message">Message:</string>
        <string name="all_messages">All messages</string>
        <string name="check_bal_instr">Enter account ID to check balance:</string>
        <string name="check">Check</string>
        <string name="existed_bal_msg">The balance of this account is: $</string>
        <string name="not_existed_bal_msg">There is no such account for this customer.</string>
        <string name="check_bal_label">Check balance</string>
        <string name="account_list">Account list</string>
        <string name="list_account_type">Type</string>
        <string name="list_account_name">Name</string>
        <string name="list_account_balance">Balance</string>
        <string name="update_instr">Enter new information to update.</string>
        <string name="update">Update</string>
        <string name="new_name">New name:</string>
        <string name="new_age">New age:</string>
        <string name="new_address">New address:</string>
        <string name="new_password">New password:</string>
        <string name="msg_name_updated">Name is updated.</string>
        <string name="msg_age_updated">Age is updated.</string>
        <string name="msg_address_updated">Address is updated.</string>
        <string name="msg_password_updated">Password is updated.</string>
        <string name="msg_update_fail">Failed to update.</string>
        <string name="address_long">Address is should be at most 100 characters.</string>
        <string name="msg_deauthenticated">Customer session is closed.</string>
        <string name="atm_account_list">Account list</string>
        <string name="account_owner">Accounts for</string>
        <string name="account_id">Account ID is</string>
        <string name="success">Success.</string>
        <string name="fail_deposit">Deposit cannot be done.</string>
        <string name="fail_withdraw">Withdrawal cannot be done.</string>
        <string name="insufficient_funds">Insufficient funds for withdrawal.</string>
        <string name="positive_balance">Balance must not be positive.</string>
        <string name="restrict_saving">Customer cannot withdraw from this account.</string>
        <string name="check_total_bal_instr">Enter the User ID to check total balance.</string>
        <string name="get_user_id">User ID:</string>
        <string name="checked_total_msg">The user\'s total balance is: $</string>
        <string name="checked_fail_msg">There is no such customer.</string>
        <string name="check_no_account">Customer has no accounts.</string>
        <string name="check_total_money_in_bank">The total balance of the bank is $</string>
        <string name="promote_instr">Enter the ID of the teller you would like to promote.</string>
        <string name="teller_id">Teller ID:</string>
        <string name="teller_id_hint">Teller ID</string>
        <string name="promote">Promote a teller</string>
        <string name="promote_button">Promote</string>
        <string name="promote_success">Teller promoted</string>
        <string name="promote_fail">Fail to promote.</string>
        <string name="view_any_msg_instr">Enter the ID of the message you would like to view:</string>
        <string name="get_msd_id">Message ID: </string>
        <string name="msg_id_hint">Message ID</string>
        <string name="fail_message">No such message ID.</string>
        <string name="view_msg">View</string>
        <string name="null_message_id">Please enter message ID.</string>
        <string name="get_message_content">Message:</string>
        <string name="message_content_hint">Message</string>
        <string name="send_message">send</string>
        <string name="success_sent">Message is sent.</string>
        <string name="fail_sent">Message cannot be sent.</string>
        <string name="leave_msg_instr">Enter the user ID and message you would like to send:</string>
        <string name="null_userid">Please enter user ID.</string>
        <string name="userid_is_not_avaliable">You cannot leave messages to teller or admin.</string>
        <string name="message_long">Message cannot be longer than 512 characters.</string>
        <string name="convert1">Your savings account with id</string>
        <string name="convert2">has been converted to a chequing account.</string>
</resources>