<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
    android:orientation="vertical"
  tools:context=".project.banking.admin.NewAdminInfoActivity">

  <TextView
    android:id="@+id/make_admin_instr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/create_instr"
    android:textSize="18sp"

    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginStart="16dp" />

  <TextView
    android:id="@+id/admin_info_age"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/name"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/make_admin_instr"
    android:layout_marginStart="16dp" />

  <EditText
      android:id="@+id/admin_name"
      android:layout_width="357dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="6dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/name_hint"
      android:inputType="textPersonName"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/admin_info_age" />

  <TextView
    android:id="@+id/get_age"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/age"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/admin_name"
    android:layout_marginStart="16dp" />

  <EditText
      android:id="@+id/admin_age"
      android:layout_width="354dp"
      android:layout_height="39dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="6dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:ems="10"
      android:hint="@string/age_hint"
      android:inputType="number"
      android:gravity="center"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/get_age" />


  <TextView
    android:id="@+id/admin_info_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/address"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/admin_age"
    android:layout_marginStart="16dp" />

  <EditText
      android:id="@+id/admin_address"
      android:layout_width="354dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/address_hint"
      android:inputType="textPersonName"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/admin_info_address" />

  <TextView
    android:id="@+id/admin_info_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/password"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/admin_address"
    android:layout_marginStart="16dp" />

  <EditText
      android:id="@+id/admin_password"
      android:layout_width="346dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/pw_hint"
      android:inputType="textPassword"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/admin_info_password" />

  <Button
    android:id="@+id/button_create_admin"
    android:layout_width="@dimen/button_width"
    android:layout_height="@dimen/button_height"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:text="@string/create"
    android:background="@color/table_title_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="16dp"
      android:gravity="center"

    app:layout_constraintTop_toBottomOf="@+id/message"
    android:layout_marginBottom="16dp" />

</LinearLayout>
</ScrollView>